--- a/index.html
+++ b/index.html
@@ -556,68 +556,71 @@
     <span class="donate-text">Donate Now</span>
 </a>
 
+<a href="https://www.buymeacoffee.com/shiyamal50e" target="_blank" class="premium-donate-btn">
+    <img src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" alt="Donate">
+    <span class="donate-text">Donate Now</span>
+</a>
+
 <style>
+    /* බටන් එක එකම තැන ස්ථාවරව තබා ගැනීම */
     .premium-donate-btn {
-        position: fixed;
-        bottom: 30px;
-        right: 30px;
-        background-color: #000000; /* තද කළු පැහැය */
-        color: #ffffff; /* සුදු පැහැති අකුරු */
-        padding: 12px 22px;
-        border-radius: 12px; /* Premium පෙනුමට තරමක් කොටු හැඩය */
+        position: fixed !important; /* එකම තැන රැඳී සිටීමට */
+        bottom: 25px;
+        right: 25px;
+        background-color: #000000;
+        color: #ffffff;
+        padding: 12px 20px;
+        border-radius: 12px;
         display: flex;
         align-items: center;
         text-decoration: none;
-        font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+        font-family: sans-serif;
         font-size: 15px;
         font-weight: 600;
-        letter-spacing: 0.5px;
-        border: 1px solid #333333; /* සියුම් Border එකක් */
-        box-shadow: 0 10px 25px rgba(0,0,0,0.3); /* Premium Shadow */
-        z-index: 9999;
-        transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        border: 1px solid #333333;
+        box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+        z-index: 99999; /* වෙනත් දේවල් වලට යට නොවීමට */
+        transition: all 0.3s ease;
     }
 
-    /* මවුස් එක උඩට ගිය විට (Hover) */
+    /* Hover effect */
     .premium-donate-btn:hover {
-        transform: translateY(-5px); /* මදක් උඩට එසවීම */
         background-color: #ffffff;
         color: #000000;
-        border-color: #000000;
-        box-shadow: 0 15px 30px rgba(0,0,0,0.4);
+        transform: translateY(-3px);
+        box-shadow: 0 10px 25px rgba(0,0,0,0.4);
     }
 
-    /* ලෝගෝ එක කළු/සුදු තීම් එකට අනුව වෙනස් වීම */
     .premium-donate-btn img {
         height: 22px;
-        margin-right: 12px;
-        filter: brightness(0) invert(1); /* සුදු පැහැයට හැරවීම */
-        transition: all 0.4s ease;
+        margin-right: 10px;
+        filter: brightness(0) invert(1);
     }
 
     .premium-donate-btn:hover img {
-        filter: brightness(0); /* Hover කළ විට කළු පැහැයට හැරවීම */
+        filter: brightness(0);
     }
 
-    /* Responsive: ෆෝන් එකට ගැලපෙන විදිහට */
+    /* ෆෝන් එකට ගැලපෙන විදිහ */
     @media (max-width: 600px) {
         .donate-text {
-            display: none; /* අකුරු ඉවත් වේ */
+            display: none;
         }
         .premium-donate-btn {
             padding: 15px;
             bottom: 20px;
             right: 20px;
-            border-radius: 50%; /* ෆෝන් එකේදී රවුම් වේ */
+            border-radius: 50%;
         }
         .premium-donate-btn img {
             margin-right: 0;
-            height: 25px;
         }
     }
 </style>
 
-    
+  
+  
 </body>
 </html>
+
 
