--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
             justify-content: center;
             align-items: center;
             border: 2px solid #fff;
-            /* Cyberpunk / Tech Shape using Clip-path */
             clip-path: polygon(15% 0, 100% 0, 100% 85%, 85% 100%, 0 100%, 0 15%);
         }
 
@@ -168,7 +167,6 @@
             .user-nav-area span { font-size: 9px; }
         }
 
-        /* --- UNIQUE PROFESSIONAL HERO BANNER --- */
         .hero-banner {
             width: 95%;
             margin: 20px auto;
@@ -186,7 +184,6 @@
             box-shadow: 0 0 40px rgba(255,255,255,0.03) inset;
         }
 
-        /* Animated Glowing Background Logic */
         .hero-banner::before {
             content: '';
             position: absolute;
@@ -234,7 +231,6 @@
             .type-wrap { font-size: 14px; }
         }
 
-        /* Content Section */
         .container {
             width: 95%;
             margin: 20px auto;
@@ -244,7 +240,6 @@
             align-items: start;
         }
 
-        /* --- GAME CARD PREMIUM UPGRADE (NO LAYOUT CHANGE) --- */
         .game-card {
             display: flex;
             gap: 20px;
@@ -307,7 +302,6 @@
             .brand-name { font-size: 30px; }
         }
 
-        /* ෆෝන් එකේ ගේම් කාඩ් (KEEPING YOUR EXACT LAYOUT) */
         @media (max-width: 480px) {
             .main-content { display: flex; flex-wrap: wrap; gap: 10px; justify-content: space-between; }
             .game-card {
@@ -331,12 +325,6 @@
             background: #0a0a0a; padding: 40px 30px; border: 1px solid #333; 
             border-radius: 20px; width: 90%; max-width: 380px; text-align: center; 
         }
-        
-        .login-input-field {
-            width: 100%; padding: 14px; margin-bottom: 15px; 
-            background: #111; border: 1px solid #333; color: white;
-            border-radius: 10px; outline: none; font-size: 14px;
-        }
 
         footer { text-align: center; padding: 20px; border-top: 1px solid #222; margin-top: 30px; color: #555; font-size: 12px; }
 
@@ -351,39 +339,50 @@
 
         .mobile-only-btn { display: block; text-align: center; margin-top: 20px; }
 
-        /* Premium Floating Donate Button Styling */
+        /* --- FIXED WHITE PREMIUM DONATE BUTTON --- */
         .premium-donate-btn {
-            position: fixed !important;
-            bottom: 25px;
-            right: 25px;
-            background-color: #ffffff;
-            color: #000000;
-            padding: 12px 22px;
+            position: fixed !important; /* පිටුව සමඟ සෙලවෙන්නේ නැතිව එකම තැන තැබීමට */
+            bottom: 25px; /* පහළ සිට ඉඩ */
+            right: 25px; /* දකුණු පස සිට ඉඩ */
+            background-color: #ffffff !important; /* සම්පූර්ණ සුදු පාට */
+            color: #000000 !important; /* කළු පාට අකුරු */
+            padding: 12px 20px;
             border-radius: 12px;
             display: flex;
             align-items: center;
             text-decoration: none;
-            font-family: sans-serif;
-            font-size: 14px;
+            font-family: 'Segoe UI', sans-serif;
+            font-size: 15px;
             font-weight: bold;
-            border: 1px solid #000;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.5);
-            z-index: 99999;
-            transition: all 0.3s ease;
+            box-shadow: 0 8px 25px rgba(255,255,255,0.2);
+            z-index: 99999; /* වෙනත් දේවල් වලට උඩින් පෙන්වීමට */
+            border: 2px solid #000;
+            transition: 0.3s;
         }
 
         .premium-donate-btn:hover {
             transform: translateY(-5px);
-            background-color: #000;
-            color: #fff;
-            border-color: #fff;
+            background-color: #eeeeee !important;
         }
 
         .premium-donate-btn img {
-            height: 20px;
+            height: 22px;
             margin-right: 10px;
+            filter: brightness(0); /* ලෝගෝ එක කළු පාට කිරීමට */
         }
 
+        /* ෆෝන් එකේදීත් වචනය පෙන්වීමට */
+        @media (max-width: 600px) {
+            .premium-donate-btn {
+                padding: 10px 15px;
+                font-size: 13px;
+                bottom: 20px;
+                right: 20px;
+            }
+            .premium-donate-btn img {
+                height: 18px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -485,17 +484,14 @@
         </aside>
     </div>    
 
-    <div class="login-overlay" id="loginModal">
-        <div class="login-box">
-            <span style="float:right; cursor:pointer;" onclick="closeModal()">✕</span>
-            <h3>LOGIN</h3>
-            <button class="submit-login-btn" onclick="signInWithGoogle()" style="margin-top:20px; background: #fff; color: #000; width: 100%; padding: 12px; font-weight: bold; border: none; border-radius: 8px; cursor: pointer;">Sign in with Google</button>
-        </div>
-    </div>
-
     <footer>
         <marquee>© [ LANX GAMES.LK ] CREATED BY, PAMOD YOSHITHA ABEYRATHNA.</marquee>
     </footer>
+
+    <a href="https://www.buymeacoffee.com/shiyamal50e" target="_blank" class="premium-donate-btn">
+        <img src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" alt="Donate">
+        <span class="donate-text">Donate Now</span>
+    </a>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
@@ -565,11 +561,6 @@
             });
         });
     </script>
-
-    <a href="https://www.buymeacoffee.com/shiyamal50e" target="_blank" class="premium-donate-btn">
-        <img src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" alt="Donate">
-        <span class="donate-text">Donate Now</span>
-    </a>
 
 </body>
 </html>
