--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
         /* --- FIXED WHITE PREMIUM DONATE BUTTON --- */
         .premium-donate-btn {
-            position: fixed !important; /* පිටුව සමඟ සෙලවෙන්නේ නැතිව එකම තැන තැබීමට */
+            position: static !important; /* පිටුව සමඟ සෙලවෙන්නේ නැතිව එකම තැන තැබීමට */
             bottom: 25px; /* පහළ සිට ඉඩ */
             right: 25px; /* දකුණු පස සිට ඉඩ */
             background-color: #ffffff !important; /* සම්පූර්ණ සුදු පාට */
@@ -564,3 +564,4 @@
 
 </body>
 </html>
+
