--- a/index.html
+++ b/index.html
@@ -295,10 +295,13 @@
         /* --- GAME CARDS PROFESSIONAL REDESIGN --- */
         .game-card {
             display: flex;
-            gap: 20px;
+            flex-direction: column; /* Desktop wala details center karanna meka damme */
+            align-items: center;    /* Contents center align kala */
+            text-align: center;     /* Text center kala */
+            gap: 15px;
             background: linear-gradient(145deg, #0a0a0a, #050505);
             padding: 20px;
-            border-radius: 16px;
+            border-radius: 25px;    /* Card eka honda rround kala */
             border: 1px solid rgba(255,255,255,0.05);
             transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             margin-bottom: 25px;
@@ -324,20 +327,22 @@
         .game-card:hover::before { left: 100%; }
 
         .game-img {
-            width: 120px;
-            height: 120px;
-            border: 1px solid #222;
+            width: 140px;
+            height: 140px;
+            border: none;           /* White border ayyin kala */
             flex-shrink: 0;
-            border-radius: 12px;
+            border-radius: 20px;    /* Image eka honda round kala */
             overflow: hidden;
             transition: 0.3s;
             box-shadow: 0 5px 15px rgba(0,0,0,0.4);
+            display: flex;
+            justify-content: center;
         }
 
-        .game-card:hover .game-img { border-color: #fff; transform: rotate(-2deg); }
-        .game-img img { width: 100%; height: 100%; object-fit: cover; }
+        .game-card:hover .game-img { transform: scale(1.05); }
+        .game-img img { width: 100%; height: 100%; object-fit: cover; border-radius: 20px; }
         
-        .game-details { display: flex; flex-direction: column; gap: 8px; justify-content: center; }
+        .game-details { display: flex; flex-direction: column; gap: 8px; justify-content: center; align-items: center; }
         .game-title { font-size: 20px; font-weight: 800; color: #fff; letter-spacing: 0.5px; }
         .game-info { font-size: 13px; color: #aaa; font-weight: 500; }
         .rating { font-size: 12px; color: #fff; background: rgba(255,255,255,0.05); width: fit-content; padding: 2px 8px; border-radius: 4px; border: 1px solid rgba(255,255,255,0.1); }
@@ -355,7 +360,7 @@
             font-weight: 900;
             letter-spacing: 1px;
             transition: 0.3s;
-            border-radius: 4px;
+            border-radius: 10px; /* Button rround kala */
             text-transform: uppercase;
         }
 
@@ -363,20 +368,23 @@
 
         @media (min-width: 1024px) {
             .container { grid-template-columns: 2.5fr 1fr; }
-            .game-img { width: 160px; height: 160px; }
+            .main-content { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; } /* Desktop walath cards 2k penna haduwa */
+            .main-content h2 { grid-column: span 2; }
+            .more-games-btn { grid-column: span 2; }
         }
 
         @media (max-width: 480px) {
-            .main-content { display: flex; flex-wrap: wrap; gap: 12px; justify-content: space-between; }
+            .main-content { display: flex; flex-wrap: wrap; gap: 10px; justify-content: space-between; }
             .game-card {
-                flex-direction: column; align-items: flex-start; text-align: left;
+                flex-direction: column; align-items: center; text-align: center;
                 width: 48%; padding: 12px; margin-bottom: 5px; gap: 8px;
-                border-radius: 12px;
+                border-radius: 20px; /* Mobile cards round kala */
             }
-            .game-img { width: 100%; height: 130px; border-radius: 8px; }
-            .game-title { font-size: 14px; min-height: 40px; line-height: 1.2; }
-            .game-info, .rating { font-size: 10px; }
-            .download-btn { margin-top: 5px; padding: 7px; font-size: 10px; width: 100%; }
+            .game-img { width: 100%; height: 110px; border-radius: 15px; border: none; }
+            .game-img img { border-radius: 15px; }
+            .game-title { font-size: 12px; min-height: 35px; line-height: 1.2; }
+            .game-info, .rating { font-size: 9px; }
+            .download-btn { margin-top: 5px; padding: 7px; font-size: 9px; width: 100%; border-radius: 8px; }
         }
 
         .login-overlay { 
