--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             color: #fff;
             text-decoration: none;
             text-align: center;
-            width: fit-content;
+            width: 160px; /* Fixed standard size per request */
             font-size: 12px;
             font-weight: 900;
             letter-spacing: 1px;
@@ -496,7 +496,7 @@
 
     <div class="container">
         <div class="main-content">
-            <h2 style="text-align: center; margin-bottom: 20px; letter-spacing: 5px; width: 100%;">GAMES</h2>
+            <h2 style="text-align: center; margin-bottom: 20px; letter-spacing: 5px; width: 100%; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 25px; font-size: 18px;">GAMES</h2>
 
             <div class="game-card">
                 <div class="game-img"><img src="download.png"></div>
@@ -542,7 +542,7 @@
                 </div>
             </div>
 
-            <a href="store.html" class="more-games-btn" style="width: 100%; border: 2px solid #fff; color: #fff; text-decoration: none; padding: 15px; display: block; text-align: center; font-weight: bold;">See More Games ➔</a>
+            <a href="store.html" class="more-games-btn" style="width: 100%; border: 2px solid #fff; color: #fff; text-decoration: none; padding: 15px; display: block; text-align: center; font-weight: bold; border-radius: 12px;">See More Games ➔</a>
         </div>    
         
         <aside class="sidebar desktop-only-ads">
