--- a/store.html
+++ b/store.html
@@ -20,19 +20,28 @@
             overflow-x: hidden;
         }
 
+        /* --- HEADER PREMIUM UPDATED (EXACT AS PREVIOUS) --- */
         header {
-            padding: 20px 5%;
+            padding: 25px 8%;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-bottom: 1.5px solid #333;
-            flex-wrap: nowrap;
+            border-bottom: 1px solid rgba(255,255,255,0.05);
+            flex-wrap: nowrap; 
             gap: 10px;
+            background: rgba(0,0,0,0.8);
+            backdrop-filter: blur(15px);
+            position: sticky;
+            top: 0;
+            z-index: 2000;
         }
 
-        .logo-section { display: flex; align-items: center; gap: 15px; }
+        .logo-section {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
 
-        /* --- SUPREME GAMING TECH LOGO (NO IMAGE) --- */
         .logo-box {
             width: 60px;
             height: 60px;
@@ -42,7 +51,6 @@
             justify-content: center;
             align-items: center;
             border: 2px solid #fff;
-            /* Cyberpunk / Tech Shape */
             clip-path: polygon(15% 0, 100% 0, 100% 85%, 85% 100%, 0 100%, 0 15%);
         }
 
@@ -56,35 +64,106 @@
         }
 
         @keyframes techBlink {
-            0%, 100% { opacity: 1; filter: drop-shadow(0 0 2px #fff); }
-            50% { opacity: 0.6; filter: drop-shadow(0 0 10px #fff); }
+            0%, 100% { opacity: 1; transform: scale(1); filter: drop-shadow(0 0 2px #fff); }
+            50% { opacity: 0.6; transform: scale(0.95); filter: drop-shadow(0 0 10px #fff); }
         }
 
-        .brand-name { font-size: 24px; font-weight: bold; letter-spacing: 2px; text-transform: uppercase; }
+        .brand-name {
+            font-size: 26px;
+            font-weight: 900;
+            letter-spacing: 4px;
+            text-transform: uppercase;
+            background: linear-gradient(to right, #fff 20%, #444 50%, #fff 80%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-size: 200% auto;
+            animation: shine 4s linear infinite;
+        }
+
+        @keyframes shine { to { background-position: 200% center; } }
+
+        /* --- LOGIN BAR PREMIUM UPDATED --- */
+        .user-nav-area {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            cursor: pointer;
+            background: transparent;
+            padding: 8px 22px;
+            border-radius: 50px;
+            border: 1px solid rgba(255,255,255,0.2);
+            transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            position: relative; 
+            flex-shrink: 0;
+        }
+        .user-nav-area:hover { border-color: #fff; background: #fff; }
+        .user-nav-area:hover span { color: #000; }
+        .user-nav-area img { width: 28px; height: 28px; border-radius: 50%; border: 1px solid #fff; object-fit: cover; }
+        .user-nav-area span { font-size: 12px; font-weight: 900; letter-spacing: 1.5px; transition: 0.3s; }
+
+        .profile-card {
+            position: absolute; top: 60px; right: 0; width: 250px; background: #000; 
+            border: 1px solid #333; border-radius: 15px; padding: 25px; display: none;
+            flex-direction: column; align-items: center; z-index: 5000; text-align: center;
+            box-shadow: 0 20px 50px rgba(0,0,0,0.9);
+        }
+        .profile-card img { width: 70px; height: 70px; border-radius: 50%; border: 2px solid #fff; margin-bottom: 15px; }
+        .profile-card h4 { font-size: 16px; margin-bottom: 5px; color: #fff; }
+        .profile-card p { font-size: 11px; color: #777; margin-bottom: 20px; }
+        .logout-btn-card { background: #fff; color: #000; border: none; padding: 10px; width: 100%; font-weight: bold; cursor: pointer; border-radius: 8px; font-size: 12px; transition: 0.3s; }
+        .logout-btn-card:hover { transform: scale(0.95); opacity: 0.9; }
 
         nav {
-            background: #0e0d0d;
-            padding: 10px 5%;
+            background: #000;
+            padding: 20px 5%;
             display: flex;
             flex-direction: column;
             align-items: center;
-            position: sticky;
-            top: 0;
             z-index: 1000;
-            gap: 10px;
+            gap: 25px;
         }
 
-        .nav-links { display: flex; list-style: none; gap: 15px; }
-        .nav-links a { color: #ffffff; text-decoration: none; text-transform: uppercase; font-size: 13px; }
+        .nav-links { display: flex; list-style: none; gap: 35px; flex-wrap: wrap; justify-content: center; }
+        .nav-links a {
+            color: #888;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 14px;
+            font-weight: 600;
+            letter-spacing: 2px;
+            transition: 0.4s;
+            position: relative;
+        }
+        .nav-links a:hover { color: #fff; }
 
         .search-bar {
-            background: transparent;
-            border: 1px solid #444;
-            padding: 8px 10px;
+            background: rgba(255,255,255,0.03);
+            border: 1px solid #222;
+            padding: 15px 25px;
             color: white;
-            border-radius: 4px;
+            border-radius: 12px;
             width: 100%;
-            max-width: 300px;
+            max-width: 600px;
+            font-size: 15px;
+            text-align: center;
+            transition: 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+            outline: none;
+        }
+        .search-bar:focus { border-color: #fff; background: #000; }
+
+        /* --- MOBILE OPTIMIZATION UPDATED (AS PREVIOUS) --- */
+        @media (max-width: 480px) {
+            header { padding: 12px 3%; }
+            .brand-name { font-size: 15px; letter-spacing: 1.5px; }
+            .logo-box { width: 40px; height: 40px; }
+            .logo-box::after { font-size: 8px; letter-spacing: 1px; }
+            .user-nav-area { padding: 4px 10px; gap: 6px; }
+            .user-nav-area span { font-size: 8px; letter-spacing: 0.5px; }
+            .user-nav-area img { width: 22px; height: 22px; }
+            nav { padding: 10px 3%; gap: 15px; }
+            .nav-links { gap: 12px; } 
+            .nav-links a { font-size: 11px; letter-spacing: 0.5px; } 
+            .search-bar { padding: 10px 15px; font-size: 12px; border-radius: 8px; }
         }
 
         .container { width: 95%; margin: 30px auto; }
@@ -173,7 +252,6 @@
 
         .mini-download-btn:hover { background: #fff; color: #000; }
 
-        /* Pagination Styling */
         .pagination-container {
             display: flex;
             justify-content: center;
@@ -206,13 +284,6 @@
 
         footer { text-align: center; padding: 20px; border-top: 1px solid #222; margin-top: 30px; color: #555; font-size: 12px; }
         .back-btn { display: inline-block; margin-bottom: 20px; color: #888; text-decoration: none; font-size: 13px; }
-
-        /* Light Mode Style */
-        body.light-mode-on { background-color: #ffffff !important; color: #000000 !important; }
-        body.light-mode-on header, body.light-mode-on nav { background-color: #f1f1f1 !important; border-color: #ccc !important; }
-        body.light-mode-on .brand-name, body.light-mode-on .nav-links a { color: #000000 !important; }
-        body.light-mode-on .logo-box { border-color: #000 !important; }
-        body.light-mode-on .logo-box::after { color: #000 !important; }
     </style>
 </head>
 <body>
@@ -222,7 +293,14 @@
             <div class="logo-box"></div>
             <div class="brand-name">LANX GAMES.LK</div>
         </div>
-        <div class="user-icon">🔗</div>
+        <div class="user-nav-area" id="authBtn" onclick="toggleAuth()">
+            <img id="userImg" src="https://cdn-icons-png.flaticon.com/512/149/149071.png">
+            <span id="userName">LOGIN</span>
+            <div class="profile-card" id="profileCard">
+                <img id="cardImg" src=""><h4 id="cardName">User</h4><p id="cardEmail"></p>
+                <button class="logout-btn-card" onclick="userLogout()">LOGOUT</button>
+            </div>
+        </div>
     </header>
 
     <nav>
@@ -231,7 +309,7 @@
             <li><a href="https://cinesubz.lk/" target="_blank">Movies🎬</a></li>
             <li><a href="https://wa.me/94777042735" target="_blank">Contact 📬</a></li>
         </ul>
-        <input type="text" id="storeSearch" class="search-bar" placeholder="Search All Games...">
+        <input type="text" id="storeSearch" class="search-bar" placeholder="🔍 Search All Games...">
     </nav>
 
     <div class="container">
@@ -247,6 +325,7 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
         import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
         const firebaseConfig = {
@@ -260,7 +339,35 @@
         };
 
         const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const provider = new GoogleAuthProvider();
         const db = getDatabase(app);
+
+        // Auth Functions
+        window.userLogout = () => signOut(auth);
+        window.toggleAuth = () => {
+            if (auth.currentUser) {
+                const card = document.getElementById('profileCard');
+                card.style.display = (card.style.display === 'flex') ? 'none' : 'flex';
+            } else {
+                signInWithPopup(auth, provider);
+            }
+        };
+
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                document.getElementById('userName').innerText = user.displayName.split(' ')[0].toUpperCase();
+                document.getElementById('userImg').src = user.photoURL;
+                document.getElementById('cardImg').src = user.photoURL;
+                document.getElementById('cardName').innerText = user.displayName;
+                document.getElementById('cardEmail').innerText = user.email;
+            } else {
+                document.getElementById('userName').innerText = "LOGIN";
+                document.getElementById('userImg').src = "https://cdn-icons-png.flaticon.com/512/149/149071.png";
+                document.getElementById('profileCard').style.display = 'none';
+            }
+        });
+
         const gameGrid = document.getElementById('gameGrid');
         const paginationBox = document.getElementById('pagination');
 
@@ -317,7 +424,6 @@
             const totalPages = Math.ceil(allGames.length / limit);
             if(totalPages <= 1) return;
 
-            // Logic to show 1-4, then 5-8, then 9-12 etc.
             const groupSize = 4;
             const currentGroup = Math.ceil(currentPage / groupSize);
             const startPage = (currentGroup - 1) * groupSize + 1;
@@ -370,14 +476,6 @@
                     gameGrid.insertAdjacentHTML('beforeend', html);
                 }
             });
-        });
-
-        window.addEventListener('load', () => {
-            if (localStorage.getItem('website-theme') === 'light') {
-                document.body.classList.add('light-mode-on');
-            } else {
-                document.body.classList.remove('light-mode-on');
-            }
         });
     </script>
 </body>
