--- a/store.html
+++ b/store.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -162,7 +162,7 @@
             .user-nav-area img { width: 22px; height: 22px; }
             nav { padding: 10px 3%; gap: 15px; }
             .nav-links { gap: 12px; } 
-            .nav-links a { font-size: 14px; letter-spacing: 0.5px; } 
+            .nav-links a { font-size: 13px; letter-spacing: 0.5px; } 
             .search-bar { padding: 10px 15px; font-size: 12px; border-radius: 8px; }
         }
 
@@ -289,19 +289,7 @@
 <body>
 
     <header>
-        <div class="logo-section">
-            <div class="logo-box"></div>
-            <div class="brand-name">LANX GAMES.LK</div>
-        </div>
-        <div class="user-nav-area" id="authBtn" onclick="toggleAuth()">
-            <img id="userImg" src="https://cdn-icons-png.flaticon.com/512/149/149071.png">
-            <span id="userName">LOGIN</span>
-            <div class="profile-card" id="profileCard">
-                <img id="cardImg" src=""><h4 id="cardName">User</h4><p id="cardEmail"></p>
-                <button class="logout-btn-card" onclick="userLogout()">LOGOUT</button>
-            </div>
-        </div>
-    </header>
+    
 
     <nav>
         <ul class="nav-links">
@@ -313,10 +301,10 @@
     </nav>
 
     <div class="container">
-        <a href="index.html" class="back-btn">← Back to Home</a>
-        <h2 class="grid-title">GAMES</h2>
+        <a href="index.html" class="back-btn"> Back to Home</a>
+        <h2 class="grid-title"> All GAMES </h2>
         <div class="game-grid" id="gameGrid">
-            <p style="text-align: center; width: 100%;">Loading Games...</p>
+            <p style="text-align: center; width: 100%;"> Loading Games..</p>
         </div>
         <div id="pagination" class="pagination-container"></div>
     </div>
@@ -480,4 +468,5 @@
     </script>
 </body>
 </html>
+
 
